--- a/web/index.html
+++ b/web/index.html
@@ -116,7 +116,6 @@ footer{margin-top:36px;color:var(--muted);text-align:center}
 <footer>Built with streamweb-cli • anime-web</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
-<script src="app.js"></script>
+<script src="/app.js"></script>
   </body>
 </html>
-
