--- a/web/player.html
+++ b/web/player.html
@@ -76,6 +76,8 @@
 
   <!-- hls.js CDN, fallback to native HLS on Safari -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1.4.0/dist/hls.min.js"></script>
+  <!-- socket.io client (served from our server) -->
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/player.js"></script>
 </body>
 </html>
