--- a/web/player.html
+++ b/web/player.html
@@ -74,9 +74,9 @@
     </div>
   </div>
 
-  <!-- hls.js CDN, fallback to native HLS on Safari -->
+  <!-- hls.js CDN-->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1.4.0/dist/hls.min.js"></script>
-  <!-- socket.io client (served from our server) -->
+  <!-- socket.io client -->
   <script src="/socket.io/socket.io.js"></script>
   <script src="/player.js"></script>
 </body>
