subtitles, clear history & ui fix!

--- a/web/index.html
+++ b/web/index.html
@@ -136,6 +136,13 @@ footer{margin-top:36px;color:var(--muted);text-align:center}
       </label>
       <p class="setting-desc">When enabled, the site attempts to open the launcher in a discreet about:blank wrapper to hide the original tab from history.</p>
     </div>
+
+    <div class="settings-body" style="border-top: 1px solid rgba(255,255,255,0.02); padding-top: 12px;">
+      <div class="setting-row">
+        <button id="clear-history-btn" style="width: 100%; background: #c53030; color: white; border: none; padding: 8px; border-radius: 6px; cursor: pointer;">Clear Watch History</button>
+      </div>
+      <p class="setting-desc">This will permanently delete your "Continue Watching" list.</p>
+    </div>
   </div>
 </div>
 
